// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoldableContainerSnap > should render a left fold correctly 1`] = `
<div>
  <div
    class="tm-wrapper-left"
  >
    <div
      class="tm-handle"
      data-testid="handle"
    >
      <div
        data-mocked="Icon"
        name="angle-right"
        variant="normal"
      />
    </div>
  </div>
</div>
`;

exports[`FoldableContainerSnap > should render a right fold correctly 1`] = `
<div>
  <div
    class="tm-wrapper-right"
  >
    <div
      class="tm-handle"
      data-testid="handle"
    >
      <div
        data-mocked="Icon"
        name="angle-left"
        variant="normal"
      />
    </div>
  </div>
</div>
`;

exports[`FoldableContainerSnap > should toggle when handle is clicked 1`] = `
<div>
  <div
    class="tm-wrapper-left"
  >
    <div
      class="tm-content"
    >
      My Content
    </div>
    <div
      class="tm-handle"
      data-testid="handle"
    >
      <div
        data-mocked="Icon"
        name="angle-left"
        variant="normal"
      />
    </div>
  </div>
</div>
`;
